# deeplearning_demo

./: .gitignore  README.md
bevdet-tensorrt-cpp/: CMakeLists.txt
bevdet-tensorrt-cpp/sample0/: sample0_lidarbox.txt
lenet_mouth/: resnet.py  train_mouth.py
lidar_bev/: .gitignore
lidar_bev/src/: CMakeLists.txt
mnn_example/src/: CMakeLists.txt
mnn_example/src/face/: test_face.cpp
ncnn_example/: .gitignore  CMakeLists.txt
pytorch_example/01-basics/feedforward_neural_network/: main.py
pytorch_example/01-basics/linear_regression/: main.py
pytorch_example/lenet_mouth/: detect_mouth.py
pytorch_example/lenet_mouth/checkpoint/: mouth_ckpt.pth
pytorch_example/yolop/: requirements.txt  test_onnx.py
pytorch_example/yolov5/: detect.py
ros_bevdet_tensorrt/src/BEVDet-ROS-TensorRT/: CMakeLists.txt
ros_bevdet_tensorrt/src/BEVDet-ROS-TensorRT/rviz/: bevdet.rviz
ros_pointpillar_tensorrt/: .gitignore
ros_pointpillar_tensorrt/src/pointpillar/: main.cpp
ros_yolov8_tensorrt/: .gitignore
tensorrt_example/bevdet-tensorrt-cpp/: configure.yaml
tensorrt_example/ros_bevdet_tensorrt/: run.sh
tensorrt_example/ros_bevdet_tensorrt/src/BEVDet-ROS-TensorRT/test/: demo_bevdet.cpp
tensorrt_example/ros_pointpillar_tensorrt/: README.md  demo.rviz
tensorrt_example/ros_pointpillar_tensorrt/src/pointpillar/: CMakeLists.txt
tensorrt_example/ros_yolov8_tensorrt/src/launch/: detect.launch
tensorrt_example/ros_yolov8_tensorrt/src/yolov8/: CMakeLists.txt
tensorrt_example/ros_yolov8_tensorrt/src/yolov8/launch/: pose.launch  segment.launch
tensorrtx/yolop/: CMakeLists.txt
yolop/lib/config/: default.py
yolov5/: README.md  requirements.txt  train.py
yolov5/data/: coco128.yaml
yolov5/data/scripts/: download_weights.sh
